# YOLOv11-ncnn

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
src/: yolo11.cpp  yolo11_seg.cpp
weights/: yolo11n_pnnx.py  yolo11n_seg_pnnx.py
